[package]
name = "grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[dependencies]
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
