[package]
name = "grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"
[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"
[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"

[dependencies]
async-stream = "0.3.5"
futures-core = "0.3.28"
futures-util = "0.3.28"
prost = "0.11.9"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1.14"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
